creating simulated users to see the effect of number of categories, and number of movies on the recommendations

--- a/ANN.ipynb
+++ b/ANN.ipynb
@@ -15,10 +15,14 @@
     "import matplotlib.pyplot as plt"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-04-30T09:38:56.165650100Z",
+     "start_time": "2024-04-30T09:38:56.153068500Z"
+    }
    },
    "id": "fe0bfee60c3cd1c1",
-   "execution_count": null
+   "execution_count": 42
   },
   {
    "cell_type": "code",
@@ -32,10 +36,14 @@
     "num_neighbors = 1000"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-04-30T09:38:56.219547300Z",
+     "start_time": "2024-04-30T09:38:56.171075800Z"
+    }
    },
    "id": "abc04405d2bc0b95",
-   "execution_count": null
+   "execution_count": 43
   },
   {
    "cell_type": "code",
@@ -47,10 +55,14 @@
     "movies_names = pd.read_csv(\"ml-latest/movies.csv\")"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-04-30T09:38:58.350510300Z",
+     "start_time": "2024-04-30T09:38:56.219547300Z"
+    }
    },
    "id": "3e5134c2e361783e",
-   "execution_count": null
+   "execution_count": 44
   },
   {
    "cell_type": "code",
@@ -60,14 +72,27 @@
     "annoy_index = AnnoyIndex(factors, 'angular')"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-04-30T09:38:58.467694200Z",
+     "start_time": "2024-04-30T09:38:58.350510300Z"
+    }
    },
    "id": "521ccfacd15a2a3b",
-   "execution_count": null
+   "execution_count": 45
   },
   {
    "cell_type": "code",
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "True"
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Adding all user vectors to the index\n",
     "for user_id in range(user_item_matrix.shape[0]):\n",
@@ -77,10 +102,14 @@
     "annoy_index.build(10)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-04-30T09:40:05.675937Z",
+     "start_time": "2024-04-30T09:38:58.470896200Z"
+    }
    },
    "id": "b3533a94f993dea4",
-   "execution_count": null
+   "execution_count": 46
   },
   {
    "cell_type": "code",
@@ -93,10 +122,14 @@
     "                      \"Home Alone (1990)\": 3.5}"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-04-30T09:40:05.717592Z",
+     "start_time": "2024-04-30T09:40:05.666861200Z"
+    }
    },
    "id": "1a6caf8df1210499",
-   "execution_count": null
+   "execution_count": 47
   },
   {
    "cell_type": "code",
@@ -112,10 +145,14 @@
     "        query_vector[movie_idx] = rating"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-04-30T09:40:05.772461500Z",
+     "start_time": "2024-04-30T09:40:05.673636500Z"
+    }
    },
    "id": "700233e3a4109118",
-   "execution_count": null
+   "execution_count": 48
   },
   {
    "cell_type": "code",
@@ -124,10 +161,14 @@
     "nearest_neighbors, distances = annoy_index.get_nns_by_vector(query_vector, 100, include_distances=True)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-04-30T09:40:05.773626400Z",
+     "start_time": "2024-04-30T09:40:05.763363500Z"
+    }
    },
    "id": "b303ec4a583ad295",
-   "execution_count": null
+   "execution_count": 49
   },
   {
    "cell_type": "code",
@@ -149,10 +190,14 @@
     "weighted_means_df = pd.DataFrame(weighted_means, columns=['movieId', 'weighted_mean']).set_index('movieId')"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-04-30T09:40:05.949127300Z",
+     "start_time": "2024-04-30T09:40:05.775776700Z"
+    }
    },
    "id": "41fb0ae3beea3342",
-   "execution_count": null
+   "execution_count": 50
   },
   {
    "cell_type": "code",
@@ -170,10 +215,14 @@
     "combined_sorted = combined.sort_values(by=['weighted_mean', 'avg_rating', 'num_ratings'], ascending=[False, False, False])"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-04-30T09:40:05.977141800Z",
+     "start_time": "2024-04-30T09:40:05.955760600Z"
+    }
    },
    "id": "6dd26fb41b185d8f",
-   "execution_count": null
+   "execution_count": 51
   },
   {
    "cell_type": "code",
@@ -184,23 +233,54 @@
     "recommendations['rank'] = range(1, 6)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-04-30T09:40:05.996854Z",
+     "start_time": "2024-04-30T09:40:05.971463800Z"
+    }
    },
    "id": "80336b29232ee7df",
-   "execution_count": null
+   "execution_count": 52
   },
   {
    "cell_type": "code",
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Top movies recommended based on nearest neighbors with weighted ratings:\n",
+      "         weighted_mean  avg_rating  num_ratings                  title  \\\n",
+      "movieId                                                                  \n",
+      "148626        0.096070    4.070588          100  Big Short, The (2015)   \n",
+      "5995          0.092462    4.059478          100    Pianist, The (2002)   \n",
+      "508           0.081546    3.804519          100    Philadelphia (1993)   \n",
+      "164179        0.081080    4.053165          100         Arrival (2016)   \n",
+      "4022          0.077481    3.685078          100       Cast Away (2000)   \n",
+      "\n",
+      "            genres  rank  \n",
+      "movieId                   \n",
+      "148626       Drama     1  \n",
+      "5995     Drama|War     2  \n",
+      "508          Drama     3  \n",
+      "164179      Sci-Fi     4  \n",
+      "4022         Drama     5  \n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Top movies recommended based on nearest neighbors with weighted ratings:\")\n",
     "print(recommendations)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-04-30T09:40:05.997907300Z",
+     "start_time": "2024-04-30T09:40:05.989430100Z"
+    }
    },
    "id": "fec6e37e0e30c1f8",
-   "execution_count": null
+   "execution_count": 53
   }
  ],
  "metadata": {
