actually valid validation now

--- a/ANN.ipynb
+++ b/ANN.ipynb
@@ -14,12 +14,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-05T16:43:50.279452900Z",
-     "start_time": "2024-05-05T16:43:50.079147800Z"
+     "end_time": "2024-05-05T20:05:03.591068200Z",
+     "start_time": "2024-05-05T20:05:03.524886700Z"
     }
    },
    "id": "fe0bfee60c3cd1c1",
-   "execution_count": 28
+   "execution_count": 48
   },
   {
    "cell_type": "markdown",
@@ -66,27 +66,26 @@
     "        if not nearest_neighbors:\n",
     "            return pd.Series()  # Return an empty series if no neighbors are found\n",
     "\n",
-    "        neighbor_ratings = self.user_item_matrix.iloc[nearest_neighbors].mean(axis=0)  # Use iloc to access by DataFrame indices\n",
+    "        neighbor_ratings = self.user_item_matrix.loc[nearest_neighbors].mean(axis=0)\n",
     "        return neighbor_ratings\n"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-05T16:43:50.344403Z",
-     "start_time": "2024-05-05T16:43:50.289240900Z"
+     "end_time": "2024-05-05T20:05:03.623604500Z",
+     "start_time": "2024-05-05T20:05:03.596543100Z"
     }
    },
    "id": "93220b3f1705fd10",
-   "execution_count": 29
+   "execution_count": 49
   },
   {
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "def run_experiments(user_item_matrix, all_combinations_movie_ids, test_size=0.2):\n",
+    "def run_experiments(user_item_matrix, all_combinations_movie_ids, until, test_size=0.2):\n",
     "    results = []\n",
-    "    c = 1\n",
-    "    for combination in all_combinations_movie_ids[c-1:c]:\n",
+    "    for combination in all_combinations_movie_ids[until-10:until]:\n",
     "        print(f'Processing combination: {combination}')\n",
     "        start_time = time.time()\n",
     "        \n",
@@ -123,41 +122,41 @@
     "            predicted_ratings = predicted_ratings.loc[actual_ratings.keys()] # -> works\n",
     "\n",
     "            actual_ratings_series = pd.Series(actual_ratings)\n",
-    "            print(actual_ratings_series)\n",
+    "            #print(actual_ratings_series)\n",
     "            predicted_ratings_series = predicted_ratings.loc[actual_ratings_series.index]  # This aligns the indices\n",
-    "            print(predicted_ratings_series)\n",
+    "            #print(predicted_ratings_series)\n",
     "            # Now calculate RMSE, MAE, and Median AE using Series directly:\n",
     "            if not predicted_ratings_series.empty:\n",
-    "                rmse = np.sqrt(np.mean((predicted_ratings_series - actual_ratings_series) ** 2))\n",
-    "                mae = mean_absolute_error(actual_ratings_series, predicted_ratings_series)\n",
-    "                med_ae = median_absolute_error(actual_ratings_series, predicted_ratings_series)\n",
-    "        \n",
-    "                rmses.append(rmse)\n",
-    "                maes.append(mae)\n",
-    "                med_aes.append(med_ae)\n",
+    "                valid = ~actual_ratings_series.isna() & ~predicted_ratings_series.isna()  # Filter out NaN values from both Series\n",
+    "                if valid.any():\n",
+    "                    rmse = np.sqrt(np.mean((predicted_ratings_series[valid] - actual_ratings_series[valid]) ** 2))\n",
+    "                    mae = mean_absolute_error(actual_ratings_series[valid], predicted_ratings_series[valid])\n",
+    "                    med_ae = median_absolute_error(actual_ratings_series[valid], predicted_ratings_series[valid])\n",
+    "                    rmses.append(rmse)\n",
+    "                    maes.append(mae)\n",
+    "                    med_aes.append(med_ae)\n",
     "        print(f\"appending results.... - time = {time.time() - start_time}\")\n",
     "        results.append({\n",
     "            \"Combination\": combination,\n",
     "            \"Average RMSE\": np.mean(rmses) if rmses else None,\n",
     "            \"RMSE StDev\": np.std(rmses) if rmses else None,\n",
     "            \"Average MAE\": np.mean(maes) if maes else None,\n",
-    "            \"Median Absolute Error\": np.median(med_ae) if med_ae else None,\n",
+    "            \"Median Absolute Error\": np.median(med_aes) if med_aes else None,\n",
     "            \"Processing Time\": time.time() - start_time\n",
     "        })\n",
     "\n",
     "    results_df = pd.DataFrame(results)\n",
-    "    results_df.to_pickle(f'results_{c}')\n",
     "    return results_df"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-05T16:43:50.454834600Z",
-     "start_time": "2024-05-05T16:43:50.332622100Z"
+     "end_time": "2024-05-05T20:05:03.624756500Z",
+     "start_time": "2024-05-05T20:05:03.611392900Z"
     }
    },
    "id": "238da23ed518cdf6",
-   "execution_count": 30
+   "execution_count": 50
   },
   {
    "cell_type": "markdown",
@@ -201,12 +200,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-05T16:43:50.680080200Z",
-     "start_time": "2024-05-05T16:43:50.440414600Z"
+     "end_time": "2024-05-05T20:05:03.847421500Z",
+     "start_time": "2024-05-05T20:05:03.621428400Z"
     }
    },
    "id": "2fd104b6420ada79",
-   "execution_count": 31
+   "execution_count": 51
   },
   {
    "cell_type": "markdown",
@@ -236,7 +235,7 @@
       "text/plain": "      movieId       userId    rating        timestamp  no_people_rated  \\\n0        1203   3738563090   96992.5   29894679700250            22730   \n1         527  13929219732  357340.5  103671567916204            84232   \n2        1193   8118516317  207758.5   61568690477830            49316   \n3         750   5650978895  144160.5   42473159316615            34324   \n4       26082    213092748    5374.0    1897779020524             1282   \n...       ...          ...       ...              ...              ...   \n1073     1981    243854131    2772.0    1714465547406             1495   \n1074     1760    552474506    6083.5    3830780656494             3317   \n1075     6482    381293121    4065.5    2992591178695             2292   \n1076     2555    285063817    2896.5    1898360097339             1679   \n1077    57532    194063825    1903.0    1636766416042             1172   \n\n      avg_rating suitable_genre  \\\n0       4.267158          Drama   \n1       4.242337          Drama   \n2       4.212801          Drama   \n3       4.199991         Comedy   \n4       4.191888          Drama   \n...          ...            ...   \n1073    1.854181         Horror   \n1074    1.834037         Comedy   \n1075    1.773778         Comedy   \n1076    1.725134         Comedy   \n1077    1.623720         Comedy   \n\n                                                  title      genres  \n0                                   12 Angry Men (1957)       Drama  \n1                               Schindler's List (1993)   Drama|War  \n2                One Flew Over the Cuckoo's Nest (1975)       Drama  \n3     Dr. Strangelove or: How I Learned to Stop Worr...  Comedy|War  \n4                             Harakiri (Seppuku) (1962)       Drama  \n...                                                 ...         ...  \n1073  Friday the 13th Part VIII: Jason Takes Manhatt...      Horror  \n1074                                 Spice World (1997)      Comedy  \n1075     Dumb and Dumberer: When Harry Met Lloyd (2003)      Comedy  \n1076                               Baby Geniuses (1999)      Comedy  \n1077                           Meet the Spartans (2008)      Comedy  \n\n[1078 rows x 9 columns]",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>movieId</th>\n      <th>userId</th>\n      <th>rating</th>\n      <th>timestamp</th>\n      <th>no_people_rated</th>\n      <th>avg_rating</th>\n      <th>suitable_genre</th>\n      <th>title</th>\n      <th>genres</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1203</td>\n      <td>3738563090</td>\n      <td>96992.5</td>\n      <td>29894679700250</td>\n      <td>22730</td>\n      <td>4.267158</td>\n      <td>Drama</td>\n      <td>12 Angry Men (1957)</td>\n      <td>Drama</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>527</td>\n      <td>13929219732</td>\n      <td>357340.5</td>\n      <td>103671567916204</td>\n      <td>84232</td>\n      <td>4.242337</td>\n      <td>Drama</td>\n      <td>Schindler's List (1993)</td>\n      <td>Drama|War</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>1193</td>\n      <td>8118516317</td>\n      <td>207758.5</td>\n      <td>61568690477830</td>\n      <td>49316</td>\n      <td>4.212801</td>\n      <td>Drama</td>\n      <td>One Flew Over the Cuckoo's Nest (1975)</td>\n      <td>Drama</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>750</td>\n      <td>5650978895</td>\n      <td>144160.5</td>\n      <td>42473159316615</td>\n      <td>34324</td>\n      <td>4.199991</td>\n      <td>Comedy</td>\n      <td>Dr. Strangelove or: How I Learned to Stop Worr...</td>\n      <td>Comedy|War</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>26082</td>\n      <td>213092748</td>\n      <td>5374.0</td>\n      <td>1897779020524</td>\n      <td>1282</td>\n      <td>4.191888</td>\n      <td>Drama</td>\n      <td>Harakiri (Seppuku) (1962)</td>\n      <td>Drama</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>1073</th>\n      <td>1981</td>\n      <td>243854131</td>\n      <td>2772.0</td>\n      <td>1714465547406</td>\n      <td>1495</td>\n      <td>1.854181</td>\n      <td>Horror</td>\n      <td>Friday the 13th Part VIII: Jason Takes Manhatt...</td>\n      <td>Horror</td>\n    </tr>\n    <tr>\n      <th>1074</th>\n      <td>1760</td>\n      <td>552474506</td>\n      <td>6083.5</td>\n      <td>3830780656494</td>\n      <td>3317</td>\n      <td>1.834037</td>\n      <td>Comedy</td>\n      <td>Spice World (1997)</td>\n      <td>Comedy</td>\n    </tr>\n    <tr>\n      <th>1075</th>\n      <td>6482</td>\n      <td>381293121</td>\n      <td>4065.5</td>\n      <td>2992591178695</td>\n      <td>2292</td>\n      <td>1.773778</td>\n      <td>Comedy</td>\n      <td>Dumb and Dumberer: When Harry Met Lloyd (2003)</td>\n      <td>Comedy</td>\n    </tr>\n    <tr>\n      <th>1076</th>\n      <td>2555</td>\n      <td>285063817</td>\n      <td>2896.5</td>\n      <td>1898360097339</td>\n      <td>1679</td>\n      <td>1.725134</td>\n      <td>Comedy</td>\n      <td>Baby Geniuses (1999)</td>\n      <td>Comedy</td>\n    </tr>\n    <tr>\n      <th>1077</th>\n      <td>57532</td>\n      <td>194063825</td>\n      <td>1903.0</td>\n      <td>1636766416042</td>\n      <td>1172</td>\n      <td>1.623720</td>\n      <td>Comedy</td>\n      <td>Meet the Spartans (2008)</td>\n      <td>Comedy</td>\n    </tr>\n  </tbody>\n</table>\n<p>1078 rows × 9 columns</p>\n</div>"
      },
-     "execution_count": 32,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,12 +246,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-05T16:43:50.740514900Z",
-     "start_time": "2024-05-05T16:43:50.653580800Z"
+     "end_time": "2024-05-05T20:05:03.871187400Z",
+     "start_time": "2024-05-05T20:05:03.846310800Z"
     }
    },
    "id": "d196ab3ec0565e3a",
-   "execution_count": 32
+   "execution_count": 52
   },
   {
    "cell_type": "code",
@@ -393,12 +392,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-05T16:43:50.797058200Z",
-     "start_time": "2024-05-05T16:43:50.663162500Z"
+     "end_time": "2024-05-05T20:05:03.946717100Z",
+     "start_time": "2024-05-05T20:05:03.871187400Z"
     }
    },
    "id": "1def6422e865d819",
-   "execution_count": 33
+   "execution_count": 53
   },
   {
    "cell_type": "markdown",
@@ -449,12 +448,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-05T16:43:52.470875400Z",
-     "start_time": "2024-05-05T16:43:50.696872400Z"
+     "end_time": "2024-05-05T20:05:05.722281200Z",
+     "start_time": "2024-05-05T20:05:03.919491200Z"
     }
    },
    "id": "ea63d7d950b52ba",
-   "execution_count": 34
+   "execution_count": 54
   },
   {
    "cell_type": "markdown",
@@ -480,44 +479,27 @@
    "cell_type": "code",
    "outputs": [
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mKeyboardInterrupt\u001B[0m                         Traceback (most recent call last)",
-      "Cell \u001B[1;32mIn[35], line 1\u001B[0m\n\u001B[1;32m----> 1\u001B[0m df_t \u001B[38;5;241m=\u001B[39m \u001B[43mpd\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mread_pickle\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[38;5;124;43msparse_ratings.pkl\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[43m)\u001B[49m\u001B[38;5;241m.\u001B[39mT\n",
-      "File \u001B[1;32m~\\PycharmProjects\\Thesis\\.venv\\Lib\\site-packages\\pandas\\io\\pickle.py:202\u001B[0m, in \u001B[0;36mread_pickle\u001B[1;34m(filepath_or_buffer, compression, storage_options)\u001B[0m\n\u001B[0;32m    199\u001B[0m     \u001B[38;5;28;01mwith\u001B[39;00m warnings\u001B[38;5;241m.\u001B[39mcatch_warnings(record\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mTrue\u001B[39;00m):\n\u001B[0;32m    200\u001B[0m         \u001B[38;5;66;03m# We want to silence any warnings about, e.g. moved modules.\u001B[39;00m\n\u001B[0;32m    201\u001B[0m         warnings\u001B[38;5;241m.\u001B[39msimplefilter(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mignore\u001B[39m\u001B[38;5;124m\"\u001B[39m, \u001B[38;5;167;01mWarning\u001B[39;00m)\n\u001B[1;32m--> 202\u001B[0m         \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[43mpickle\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mload\u001B[49m\u001B[43m(\u001B[49m\u001B[43mhandles\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mhandle\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m    203\u001B[0m \u001B[38;5;28;01mexcept\u001B[39;00m excs_to_catch:\n\u001B[0;32m    204\u001B[0m     \u001B[38;5;66;03m# e.g.\u001B[39;00m\n\u001B[0;32m    205\u001B[0m     \u001B[38;5;66;03m#  \"No module named 'pandas.core.sparse.series'\"\u001B[39;00m\n\u001B[0;32m    206\u001B[0m     \u001B[38;5;66;03m#  \"Can't get attribute '__nat_unpickle' on <module 'pandas._libs.tslib\"\u001B[39;00m\n\u001B[0;32m    207\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m pc\u001B[38;5;241m.\u001B[39mload(handles\u001B[38;5;241m.\u001B[39mhandle, encoding\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mNone\u001B[39;00m)\n",
-      "File \u001B[1;32m~\\PycharmProjects\\Thesis\\.venv\\Lib\\site-packages\\numpy\\core\\numeric.py:1851\u001B[0m, in \u001B[0;36m_frombuffer\u001B[1;34m(buf, dtype, shape, order)\u001B[0m\n\u001B[0;32m   1845\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m function(\u001B[38;5;241m*\u001B[39margs, \u001B[38;5;241m*\u001B[39m\u001B[38;5;241m*\u001B[39mkwargs)\n\u001B[0;32m   1848\u001B[0m _fromfunction_with_like \u001B[38;5;241m=\u001B[39m array_function_dispatch()(fromfunction)\n\u001B[1;32m-> 1851\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21m_frombuffer\u001B[39m(buf, dtype, shape, order):\n\u001B[0;32m   1852\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m frombuffer(buf, dtype\u001B[38;5;241m=\u001B[39mdtype)\u001B[38;5;241m.\u001B[39mreshape(shape, order\u001B[38;5;241m=\u001B[39morder)\n\u001B[0;32m   1855\u001B[0m \u001B[38;5;129m@set_module\u001B[39m(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mnumpy\u001B[39m\u001B[38;5;124m'\u001B[39m)\n\u001B[0;32m   1856\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21misscalar\u001B[39m(element):\n",
-      "\u001B[1;31mKeyboardInterrupt\u001B[0m: "
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "350\n",
+      "Processing combination: [527, 344, 1258, 164179, 160438]\n",
+      "training.... - time = 3.7446136474609375\n"
      ]
     }
    ],
    "source": [
-    "df_t = pd.read_pickle(\"sparse_ratings.pkl\").T"
+    "for i in range(350,729,10):\n",
+    "    print(i)\n",
+    "    df_t = pd.read_pickle(\"sparse_ratings.pkl\").T\n",
+    "    results_df = run_experiments(df_t, all_combinations_movie_ids, i)\n",
+    "    results_df.to_pickle(f'results{i}')"
    ],
    "metadata": {
     "collapsed": false,
+    "is_executing": true,
     "ExecuteTime": {
-     "end_time": "2024-05-05T16:43:55.889359400Z",
-     "start_time": "2024-05-05T16:43:52.472664200Z"
-    }
-   },
-   "id": "35de50366140cd10",
-   "execution_count": 35
-  },
-  {
-   "cell_type": "code",
-   "outputs": [],
-   "source": [
-    "results_df = run_experiments(df_t, all_combinations_movie_ids)\n",
-    "print(results_df)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-05-05T16:43:55.901446400Z",
-     "start_time": "2024-05-05T16:43:55.891647300Z"
+     "start_time": "2024-05-05T20:05:05.724435400Z"
     }
    },
    "id": "ca60f8d814864e0e",
