going to pick some movies now

--- a/ANN.ipynb
+++ b/ANN.ipynb
@@ -14,12 +14,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-05T20:05:03.591068200Z",
-     "start_time": "2024-05-05T20:05:03.524886700Z"
+     "end_time": "2024-05-06T09:11:14.413745400Z",
+     "start_time": "2024-05-06T09:11:14.348928200Z"
     }
    },
    "id": "fe0bfee60c3cd1c1",
-   "execution_count": 48
+   "execution_count": 11
   },
   {
    "cell_type": "markdown",
@@ -72,12 +72,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-05T20:05:03.623604500Z",
-     "start_time": "2024-05-05T20:05:03.596543100Z"
+     "end_time": "2024-05-06T09:11:14.443365600Z",
+     "start_time": "2024-05-06T09:11:14.430864400Z"
     }
    },
    "id": "93220b3f1705fd10",
-   "execution_count": 49
+   "execution_count": 12
   },
   {
    "cell_type": "code",
@@ -85,7 +85,7 @@
    "source": [
     "def run_experiments(user_item_matrix, all_combinations_movie_ids, until, test_size=0.2):\n",
     "    results = []\n",
-    "    for combination in all_combinations_movie_ids[until-10:until]:\n",
+    "    for combination in all_combinations_movie_ids[until-9:until]:\n",
     "        print(f'Processing combination: {combination}')\n",
     "        start_time = time.time()\n",
     "        \n",
@@ -151,12 +151,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-05T20:05:03.624756500Z",
-     "start_time": "2024-05-05T20:05:03.611392900Z"
+     "end_time": "2024-05-06T09:11:14.494922600Z",
+     "start_time": "2024-05-06T09:11:14.452500900Z"
     }
    },
    "id": "238da23ed518cdf6",
-   "execution_count": 50
+   "execution_count": 13
   },
   {
    "cell_type": "markdown",
@@ -200,12 +200,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-05T20:05:03.847421500Z",
-     "start_time": "2024-05-05T20:05:03.621428400Z"
+     "end_time": "2024-05-06T09:11:14.742736Z",
+     "start_time": "2024-05-06T09:11:14.465673300Z"
     }
    },
    "id": "2fd104b6420ada79",
-   "execution_count": 51
+   "execution_count": 14
   },
   {
    "cell_type": "markdown",
@@ -235,7 +235,7 @@
       "text/plain": "      movieId       userId    rating        timestamp  no_people_rated  \\\n0        1203   3738563090   96992.5   29894679700250            22730   \n1         527  13929219732  357340.5  103671567916204            84232   \n2        1193   8118516317  207758.5   61568690477830            49316   \n3         750   5650978895  144160.5   42473159316615            34324   \n4       26082    213092748    5374.0    1897779020524             1282   \n...       ...          ...       ...              ...              ...   \n1073     1981    243854131    2772.0    1714465547406             1495   \n1074     1760    552474506    6083.5    3830780656494             3317   \n1075     6482    381293121    4065.5    2992591178695             2292   \n1076     2555    285063817    2896.5    1898360097339             1679   \n1077    57532    194063825    1903.0    1636766416042             1172   \n\n      avg_rating suitable_genre  \\\n0       4.267158          Drama   \n1       4.242337          Drama   \n2       4.212801          Drama   \n3       4.199991         Comedy   \n4       4.191888          Drama   \n...          ...            ...   \n1073    1.854181         Horror   \n1074    1.834037         Comedy   \n1075    1.773778         Comedy   \n1076    1.725134         Comedy   \n1077    1.623720         Comedy   \n\n                                                  title      genres  \n0                                   12 Angry Men (1957)       Drama  \n1                               Schindler's List (1993)   Drama|War  \n2                One Flew Over the Cuckoo's Nest (1975)       Drama  \n3     Dr. Strangelove or: How I Learned to Stop Worr...  Comedy|War  \n4                             Harakiri (Seppuku) (1962)       Drama  \n...                                                 ...         ...  \n1073  Friday the 13th Part VIII: Jason Takes Manhatt...      Horror  \n1074                                 Spice World (1997)      Comedy  \n1075     Dumb and Dumberer: When Harry Met Lloyd (2003)      Comedy  \n1076                               Baby Geniuses (1999)      Comedy  \n1077                           Meet the Spartans (2008)      Comedy  \n\n[1078 rows x 9 columns]",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>movieId</th>\n      <th>userId</th>\n      <th>rating</th>\n      <th>timestamp</th>\n      <th>no_people_rated</th>\n      <th>avg_rating</th>\n      <th>suitable_genre</th>\n      <th>title</th>\n      <th>genres</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1203</td>\n      <td>3738563090</td>\n      <td>96992.5</td>\n      <td>29894679700250</td>\n      <td>22730</td>\n      <td>4.267158</td>\n      <td>Drama</td>\n      <td>12 Angry Men (1957)</td>\n      <td>Drama</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>527</td>\n      <td>13929219732</td>\n      <td>357340.5</td>\n      <td>103671567916204</td>\n      <td>84232</td>\n      <td>4.242337</td>\n      <td>Drama</td>\n      <td>Schindler's List (1993)</td>\n      <td>Drama|War</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>1193</td>\n      <td>8118516317</td>\n      <td>207758.5</td>\n      <td>61568690477830</td>\n      <td>49316</td>\n      <td>4.212801</td>\n      <td>Drama</td>\n      <td>One Flew Over the Cuckoo's Nest (1975)</td>\n      <td>Drama</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>750</td>\n      <td>5650978895</td>\n      <td>144160.5</td>\n      <td>42473159316615</td>\n      <td>34324</td>\n      <td>4.199991</td>\n      <td>Comedy</td>\n      <td>Dr. Strangelove or: How I Learned to Stop Worr...</td>\n      <td>Comedy|War</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>26082</td>\n      <td>213092748</td>\n      <td>5374.0</td>\n      <td>1897779020524</td>\n      <td>1282</td>\n      <td>4.191888</td>\n      <td>Drama</td>\n      <td>Harakiri (Seppuku) (1962)</td>\n      <td>Drama</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>1073</th>\n      <td>1981</td>\n      <td>243854131</td>\n      <td>2772.0</td>\n      <td>1714465547406</td>\n      <td>1495</td>\n      <td>1.854181</td>\n      <td>Horror</td>\n      <td>Friday the 13th Part VIII: Jason Takes Manhatt...</td>\n      <td>Horror</td>\n    </tr>\n    <tr>\n      <th>1074</th>\n      <td>1760</td>\n      <td>552474506</td>\n      <td>6083.5</td>\n      <td>3830780656494</td>\n      <td>3317</td>\n      <td>1.834037</td>\n      <td>Comedy</td>\n      <td>Spice World (1997)</td>\n      <td>Comedy</td>\n    </tr>\n    <tr>\n      <th>1075</th>\n      <td>6482</td>\n      <td>381293121</td>\n      <td>4065.5</td>\n      <td>2992591178695</td>\n      <td>2292</td>\n      <td>1.773778</td>\n      <td>Comedy</td>\n      <td>Dumb and Dumberer: When Harry Met Lloyd (2003)</td>\n      <td>Comedy</td>\n    </tr>\n    <tr>\n      <th>1076</th>\n      <td>2555</td>\n      <td>285063817</td>\n      <td>2896.5</td>\n      <td>1898360097339</td>\n      <td>1679</td>\n      <td>1.725134</td>\n      <td>Comedy</td>\n      <td>Baby Geniuses (1999)</td>\n      <td>Comedy</td>\n    </tr>\n    <tr>\n      <th>1077</th>\n      <td>57532</td>\n      <td>194063825</td>\n      <td>1903.0</td>\n      <td>1636766416042</td>\n      <td>1172</td>\n      <td>1.623720</td>\n      <td>Comedy</td>\n      <td>Meet the Spartans (2008)</td>\n      <td>Comedy</td>\n    </tr>\n  </tbody>\n</table>\n<p>1078 rows × 9 columns</p>\n</div>"
      },
-     "execution_count": 52,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -246,12 +246,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-05T20:05:03.871187400Z",
-     "start_time": "2024-05-05T20:05:03.846310800Z"
+     "end_time": "2024-05-06T09:11:14.805737500Z",
+     "start_time": "2024-05-06T09:11:14.731609700Z"
     }
    },
    "id": "d196ab3ec0565e3a",
-   "execution_count": 52
+   "execution_count": 15
   },
   {
    "cell_type": "code",
@@ -392,12 +392,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-05T20:05:03.946717100Z",
-     "start_time": "2024-05-05T20:05:03.871187400Z"
+     "end_time": "2024-05-06T09:11:14.807738500Z",
+     "start_time": "2024-05-06T09:11:14.755516100Z"
     }
    },
    "id": "1def6422e865d819",
-   "execution_count": 53
+   "execution_count": 16
   },
   {
    "cell_type": "markdown",
@@ -448,12 +448,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-05T20:05:05.722281200Z",
-     "start_time": "2024-05-05T20:05:03.919491200Z"
+     "end_time": "2024-05-06T09:11:17.086767200Z",
+     "start_time": "2024-05-06T09:11:14.798737900Z"
     }
    },
    "id": "ea63d7d950b52ba",
-   "execution_count": 54
+   "execution_count": 17
   },
   {
    "cell_type": "markdown",
@@ -482,28 +482,71 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "350\n",
-      "Processing combination: [527, 344, 1258, 164179, 160438]\n",
-      "training.... - time = 3.7446136474609375\n"
+      "729\n",
+      "Processing combination: [1961, 586, 142488, 168250, 1304]\n",
+      "training.... - time = 15.919143199920654\n",
+      "predicting.... - time = 100.80968594551086\n",
+      "appending results.... - time = 102.04784965515137\n",
+      "Processing combination: [1961, 586, 142488, 168250, 160438]\n",
+      "training.... - time = 9.51864767074585\n",
+      "predicting.... - time = 94.95256567001343\n",
+      "appending results.... - time = 95.92509245872498\n",
+      "Processing combination: [1961, 586, 142488, 168250, 109487]\n",
+      "training.... - time = 6.847895860671997\n",
+      "predicting.... - time = 92.60198163986206\n",
+      "appending results.... - time = 95.09557819366455\n",
+      "Processing combination: [1961, 586, 142488, 168250, 109487, 1304]\n",
+      "training.... - time = 7.723654270172119\n",
+      "predicting.... - time = 92.98450803756714\n",
+      "appending results.... - time = 94.22064256668091\n",
+      "Processing combination: [1961, 586, 142488, 168250, 109487, 160438]\n",
+      "training.... - time = 6.9492106437683105\n",
+      "predicting.... - time = 100.93577218055725\n",
+      "appending results.... - time = 101.88849520683289\n",
+      "Processing combination: [1961, 586, 142488, 168250, 164179]\n",
+      "training.... - time = 7.021768093109131\n",
+      "predicting.... - time = 97.06475353240967\n",
+      "appending results.... - time = 99.5806930065155\n",
+      "Processing combination: [1961, 586, 142488, 168250, 164179, 1304]\n",
+      "training.... - time = 7.424489259719849\n",
+      "predicting.... - time = 96.52546954154968\n",
+      "appending results.... - time = 97.86286091804504\n",
+      "Processing combination: [1961, 586, 142488, 168250, 164179, 160438]\n",
+      "training.... - time = 7.800008535385132\n",
+      "predicting.... - time = 96.99368262290955\n",
+      "appending results.... - time = 98.1353988647461\n"
      ]
     }
    ],
    "source": [
-    "for i in range(350,729,10):\n",
-    "    print(i)\n",
-    "    df_t = pd.read_pickle(\"sparse_ratings.pkl\").T\n",
-    "    results_df = run_experiments(df_t, all_combinations_movie_ids, i)\n",
-    "    results_df.to_pickle(f'results{i}')"
+    "print(729)\n",
+    "df_t = pd.read_pickle(\"sparse_ratings.pkl\").T\n",
+    "results_df = run_experiments(df_t, all_combinations_movie_ids, 729)\n",
+    "results_df.to_pickle(f'results{729}')"
    ],
    "metadata": {
     "collapsed": false,
-    "is_executing": true,
     "ExecuteTime": {
-     "start_time": "2024-05-05T20:05:05.724435400Z"
+     "end_time": "2024-05-06T09:24:26.604214Z",
+     "start_time": "2024-05-06T09:11:17.091772400Z"
     }
    },
    "id": "ca60f8d814864e0e",
-   "execution_count": null
+   "execution_count": 18
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-05-06T09:24:26.881888600Z",
+     "start_time": "2024-05-06T09:24:26.586101200Z"
+    }
+   },
+   "id": "f18f861b4eb219e6",
+   "execution_count": 18
   }
  ],
  "metadata": {
